--- a/gb/21/10/13/n13300859.md
+++ b/gb/21/10/13/n13300859.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zhhqsq3413/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>郑文灿一日导护志工  交通安全观念从小扎根</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13300861-521728-600x400.jpg" />
 <h6>桃园市长郑文灿担任导护志工。（桃园市府新闻处提供）
 </h6>
 <hr>
-<p>【大纪元2021年10月13日讯】（大纪元记者徐乃义台湾桃园报导）桃园市长<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>13日上午前往芦竹区锦兴国小担任一日导护志工，引导学童们安全上学。郑文灿表示，10月为全国<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>月，市府尤其重视学童上下学交通安全议题，希望透过强化交通安全教育，鼓励学童从小养成遵守交通规则的习惯，达成“交通安全停看听、到校上学才放心”的宣导目标。</p>
+<p>【大纪元2021年10月13日讯】（大纪元记者徐乃义台湾桃园报导）桃园市长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>13日上午前往芦竹区锦兴国小担任一日导护志工，引导学童们安全上学。郑文灿表示，10月为全国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>月，市府尤其重视学童上下学交通安全议题，希望透过强化交通安全教育，鼓励学童从小养成遵守交通规则的习惯，达成“交通安全停看听、到校上学才放心”的宣导目标。</p>
 <figure id="13300862" aria-describedby="caption-13300862" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13300862-521729-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13300862-521729-450x300.jpg" alt="学童通过斑马线。 " width="500" /></a><figcaption id="caption-13300862" class="wp-caption-text">学童通过斑马线。 （桃园市府新闻处提供）</figcaption></figure>
-<p><ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>穿起反光背心、手拿导护旗，在校门口引导学童们过马路、安全进入校园，也透过锦兴交安小学堂活动，以有奖征答互动方式，帮助小朋友建立<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>基本知识，例如：通过路口前，务必先停下脚步，确认左右有无来车，待安全无虞才可通行；以及乘坐机车须戴安全帽、搭乘车辆须系安全带等观念。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>穿起反光背心、手拿导护旗，在校门口引导学童们过马路、安全进入校园，也透过锦兴交安小学堂活动，以有奖征答互动方式，帮助小朋友建立<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>基本知识，例如：通过路口前，务必先停下脚步，确认左右有无来车，待安全无虞才可通行；以及乘坐机车须戴安全帽、搭乘车辆须系安全带等观念。</p>
 <figure id="13300864" aria-describedby="caption-13300864" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13300864-521730-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13300864-521730-450x300.jpg" alt="桃园市长郑文灿举行交安小学堂活动。" width="500" /></a><figcaption id="caption-13300864" class="wp-caption-text">桃园市长郑文灿举行交安小学堂活动。（桃园市府新闻处提供）</figcaption></figure>
 <p>郑文灿提到，市府补助锦兴国小于校内设置“交通安全情境区”，包含道路交通标线、标志、灯号等设施，以实地场景及体验式教学，让学童更容易学习交通安全知识。此外，市府也针对骑士安全驾驶层面，与机车驾训班合作加强宣导，希望让市民朋友行的安全以及骑车安全获得更大保障。</p>
 <p>郑文灿感谢导护志工协助守护学童安全，今日他也在导护志工的协助下，在“交通安全情境区”与学生共同演示行人停看听，安全过马路的流程；而市府警察局除了协勤维护校园周边交通秩序外，今日也设置交通安全宣导摊位，由警察大头娃娃协助宣导，并引导学生安全到校上课。◇</p>
@@ -18,47 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/7/13/n12251922.md#1">桃园透过智慧ITS应用  智慧交通提升交通安全</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/4/7/n12863329.md#1">机车安全防御驾驶 年轻机车族群防御驾驶观念</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/23/n13254174.md#1">桃园协拍中心协助多部作品入围第56届金钟奖</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/29/n13267997.md#1">兼顾节能行车安全  桃市人因智慧照明路灯系统</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625551.md#1">低碳办桌 桃园绿色生活悠游节结合在地美食</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625542.md#1">2022桃园咖啡庄园节  喜好咖啡民众一次满足</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625521.md#1">桃园6日本土个案+0  米迪幼儿园群聚事控制</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625388.md#1">太岁殿偷香油钱 桃园男扯要测庙方政治倾向</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13621452.md#1">女人记得“停看听” 让自己拥有更多的选择</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13620795.md#1">互贵兴业公司二度捐赠桃园消防局快筛试剂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/13/n12251922.md#1">桃园透过智慧ITS应用  智慧交通提升交通安全</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/7/n12863329.md#1">机车安全防御驾驶 年轻机车族群防御驾驶观念</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/23/n13254174.md#1">桃园协拍中心协助多部作品入围第56届金钟奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/29/n13267997.md#1">兼顾节能行车安全  桃市人因智慧照明路灯系统</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680175.md#1">醒吾科大携手智泰科技推动AI教育</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680170.md#1">航空城征收住户搬迁 大园警查获窃盗现行犯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680096.md#1">郑文灿担任春祭致祭典礼主祭官  追思殉职人员</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420856.md#1" target="_blank">林辉：李大钊误导北大学生同时也在卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/28/n13610168.md#1">【唐瑞讲故事】朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622508.md#1">【新闻看点】乌克兰核电站遭击 战争或6走向</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623088.md#1">【车评】奇异休旅车：2022 Kia Telluride SX</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622943.md#1">【远见快评】蓬佩奥吁建交台湾 或引台海3变数</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/3/n13619947.md#1">随乌克兰危机演变 中共最高层似现分裂迹象</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/3/n13620188.md#1">中共官媒否认俄军枪杀四名中国留学生后删文</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622400.md#1">俄军在乌克兰或深陷战争泥沼 美再警告中共</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622910.md#1">郑欣宜居家避疫仍化妆 靠生酮饮食减重20磅</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623650.md#1">CUBE娱乐与徐穗珍解约 公布霸凌案调查结果</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/3/n13619020.md#1">《嘉庆君》收视庆功 陈亚兰祭收视破2微服出巡</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/3/n13620385.md#1">马修·麦康纳秃顶20年 不懈做一事头发变茂密</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13606787.md#1">痛风可以吃大豆、豆制品！但不能吃这类食物</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/2/n13616608.md#1">减少白发的自然方法</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13606756.md#1">吃蔬菜能增肌！专家：比肉类对肌肉更好</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/3/n13618986.md#1">银发族早餐养生粥 补中气、助排便、防疾病</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13620732.md#1">胃不好吃什么？7类食物养胃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13281280.md#1">无神论统御的基督教王国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13281397.md#1">中国佛教史上最大法难——中共毁灭佛教</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/5/n13284031.md#1">【未解之谜】英国鬼屋背后的真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297708.md#1">【新闻看点?】台湾成核心焦点 美中紧张升级？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297739.md#1">【远见快评】和统即武统？习与台湾隔空交手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13295820.md#1">沈四海：香港禁止庆双十节 风暴后挂风球惹笑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295300.md#1">国军名将张灵甫遗孀王玉龄女士去世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13292560.md#1">【直播】110年台湾双十节 亮点流程一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13293154.md#1">【财商天下】中国地方债惊人 或引发企业倒闭潮</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295303.md#1">杜汶泽观台湾双十大典直播：相信这里有未来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295244.md#1">梅艳芳58岁冥寿 梁朝伟贴温馨合照悼念</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13293804.md#1">杨丽音揭童年阴影 自比茶叶蛋：裂痕多越入味</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297597.md#1">汤唯42歳生日 晒年迈父亲与5岁女儿合照</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297809.md#1">唐诗咏自曝：曾被嫌太瘦太矮不能演主角</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13293863.md#1">校车没来 美国老爸开加长型礼车送小孩上学</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13295825.md#1">第一款新冠口服药？莫纳皮拉韦效果副作用一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295565.md#1">不用再怕蟑螂  只要收藏7个天然除蟑妙方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13292766.md#1">【健康1+1】第一款DNA疫苗获批 比mRNA多2优点？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13294304.md#1">狮子从公厕里冒出来 让人看傻眼</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/13/n13300859.htm">郑文灿一日导护志工  交通安全观念从小扎根</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/13/n13300859.htm">郑文灿一日导护志工  交通安全观念从小扎根</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/13/n13300859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/13/n13300859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
